* Curve: Layout issues in IE6 (ie6.css) [Bug 3440]
git-svn-id: https://devel.simplemachines.org/code/smf/trunk@8401 a96bbafc-d752-43aa-a6db-eed64a5f2cf9

--- a/Themes/curve/css/ie6.css
+++ b/Themes/curve/css/ie6.css
@@ -41,15 +41,14 @@
 	background: url(../images/theme/menu_gfx.gif) no-repeat 0 -31px;
 }
 /* the user section needs some attention */
+#main_menu
+{
+    width: 98%;
+}
 #top_section
 {
-	height: 65px;
-	width: 100%;
-}
-#content_section
-{
-	width: 100%;
-}
+    height: 65px;
+} 
 /* **************** */
 /* from MessageIndex.template */
 /* **************** */
